objects/Links__mdt.object
<CustomObject>
    <description>Stores links for different offering types, url types and countries</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>What it Does? Stores country info
Downstream Impact? Effects legal process
Which department is owner? IT/Legal Team</description>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                    <default>true</default>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_Type__c</fullName>
        <description>What it Does? Stores type of URLs 
Downstream Impact? Effects legal process 
Which department is owner? IT/Legal Team</description>
        <label>Link Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MSA</fullName>
                    <default>true</default>
                    <label>MSA</label>
                </value>
                <value>
                    <fullName>PCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <description>What it Does? Stores offering type
Downstream Impact? Effects legal process
Which department is owner? IT/Legal Team</description>
        <label>Offering Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Edition</fullName>
                    <default>true</default>
                    <label>Business Edition</label>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>What it Does? Stores msa link
Downstream Impact? Effects legal process
Which department is owner? IT/Legal Team</description>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Links</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Country__c</columns>
        <columns>Link_Type__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>URL__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Links</pluralLabel>
</CustomObject>